deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paradox-trello-web
spec:
  selector:
    app: paradox-trello-web
  ports:
    - name: http
      port: 80
      targetPort: http
