deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paradox-trello-live
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - paradox-trello.lol
        - www.paradox-trello.lol
      secretName: paradox-trello-lol-tls
  rules:
    - host: paradox-trello.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paradox-trello-web
                port:
                  name: http
    - host: www.paradox-trello.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paradox-trello-web
                port:
                  name: http
